@@ -1,3 +1,7 @@
+2009-08-29	Konstantin V. Arkhipov
+
+	* core/DB/MySQL.class.php: respect port setting.
+
 2009-08-20	Denis M. Gabaidulin
 
 	* main/Crypto/Crypter.class.php simple mcrypt ext. wrapper added.
